[package]
name = "bl602-exception"
version = "0.1.0"
authors = ["9names <60134748+9names@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.6.0"
bl602-hal = { git="https://github.com/9names/bl602-hal.git", branch="serial_fifo_fmt" }